Layout bug fixes

--- a/src/css/components/_voh-submenu.scss
+++ b/src/css/components/_voh-submenu.scss
@@ -27,6 +27,7 @@
     border: 0;
     background-color: $fenix-light-bg;
     min-width: 250px;
+    padding: 0;
 
     > li{
       height: $host-menu-height;
@@ -61,7 +62,7 @@
         position: relative;
         top: 50%;
         height:100%;
-        padding-top: 16px;
+        padding-top: 12px;
         @include fx-transfor-me(translateY(-50%));
 
         &:hover{
