--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2963,7 +2963,7 @@ h1 {
   color: #2c87b8; }
 
 /* Components */
-/* AFO  BreadCrumbs */
+/* VOH  BreadCrumbs */
 #breadcumb_container {
   height: 35px;
   overflow: hidden;
@@ -2983,6 +2983,9 @@ h1 {
 .breadcrumb > li + li:before {
   content: '|';
   color: #666666; }
+
+.voh-home .breadcrumb {
+  display: none; }
 
 /* Africa Fertilizer Footer */
 footer {
@@ -3224,7 +3227,8 @@ input[type="checkbox"]:checked + label {
   box-shadow: none;
   border: 0;
   background-color: #f1f1f1;
-  min-width: 250px; }
+  min-width: 250px;
+  padding: 0; }
   .dropdown .dropdown-menu > li {
     height: 40px;
     border-bottom: 1px solid white;
@@ -3249,7 +3253,7 @@ input[type="checkbox"]:checked + label {
       position: relative;
       top: 50%;
       height: 100%;
-      padding-top: 16px;
+      padding-top: 12px;
       -ms-transform: translateY(-50%);
       -webkit-transform: translateY(-50%);
       transform: translateY(-50%); }
@@ -3532,15 +3536,22 @@ input[type="checkbox"]:checked + label {
     color: #2c87b8;
     text-transform: uppercase; }
 
+.db-updates-list-holder {
+  height: 400px;
+  overflow-y: scroll; }
+
 .db-updates-list {
   list-style: none;
-  padding-left: 0; }
+  padding-left: 0;
+  padding-right: 15px; }
   .db-updates-list li {
     position: relative;
     padding: 15px 0 15px 70px;
     border-bottom: 1px solid #cccccc; }
+    .db-updates-list li:last-child {
+      border-bottom-color: transparent; }
     .db-updates-list li h3 {
-      margin-bottom: 0;
+      margin: 0;
       color: #666666; }
     .db-updates-list li .db-update-ico {
       position: absolute;
@@ -3619,7 +3630,7 @@ input[type="checkbox"]:checked + label {
 
 .voh-result {
   width: 50%;
-  height: 275px;
+  height: 305px;
   padding: 15px; }
   .voh-result.w2 {
     width: 100%; }
